--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "socket.io": "^4.7.2"
