--- a/package.json
+++ b/package.json
@@ -2,26 +2,28 @@
   "name": "skribbl-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_PATH=./build node build/index.js",
-    "build": "tsc -p .",
-    "dev": "nodemon src/index.ts"
+    "start": "npm run build && node dist/index.js",
+    "build": "rm -rf dist && tsc",
+    "dev": "nodemon --exec npm run start"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.11.1",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-random-string": "^5.0.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "socket.io": "^4.7.2"
-  }
+    "socket.io": "^4.7.4"
+  },
+  "type": "module"
 }
