--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.1",
-    "nodemon": "^3.0.2",
+    "@types/node": "^20.11.10",
+    "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "crypto-random-string": "^5.0.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "random-words": "^2.0.1",
     "socket.io": "^4.7.4"
   },
   "type": "module"
