--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.3.0",
     "random-words": "^2.0.1",
+    "readline": "^1.3.0",
     "socket.io": "^4.7.4"
   },
   "type": "module"
