--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.10",
     "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -28,5 +30,6 @@
     "readline": "^1.3.0",
     "socket.io": "^4.7.4"
   },
-  "type": "module"
+  "type": "module",
+  "module": "ESNext"
 }
