--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
       - '4000:4000'
     environment:
       - MONGO_URI=mongodb://db:27017/
+    volumes:
+      - ./src:/app/src
+      - ./package.json:/app/package.json
+      - ./tsconfig.json:/app/tsconfig.json
 
   db: 
     container_name: skribbl_db
