--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^1.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.10",
+    "cheerio": "^1.1.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wordpos": "^2.1.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
     "mongodb": "^6.12.0",
-    "random-words": "^2.0.1",
-    "readline": "^1.3.0",
     "socket.io": "^4.8.1"
   },
   "type": "module",
