--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - '4000:4000'
     environment:
-      - MONGO_URI=mongodb://db:27017/
+      - MONGO_URI=mongodb://db:27017/?directConnection=true
     volumes:
       - ./src:/app/src
       - ./package.json:/app/package.json
@@ -18,6 +18,18 @@ services:
       - '27018:27017'
     volumes:
       - db_data:/data/db
+    command: ["--replSet", "rs0", "--bind_ip_all"]
+
+  mongo-init:
+    container_name: mongo_rs
+    image: mongo
+    restart: "no"
+    depends_on:
+      - db
+    command: >
+      sh -c "sleep 5; mongosh \"mongodb://db:27017\" --eval '
+      rs.initiate()
+      '"
 
 volumes:
   db_data:
