--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-random-string": "^5.0.0",
     "express": "^4.18.2",
     "mongodb": "^6.12.0",
+    "redis": "^5.8.3",
     "socket.io": "^4.8.1"
   },
   "type": "module",
